src/sections/speakers/styles.scss
@import '../../variables';
@import '../../placeholders';
@import '../../mixins';

.speakers {
  overflow: hidden;
  position: relative;
  display: none;
  &.open {
    display: block;
  }
  @include respond-to(lg) {
    display: block;
  }
}
.speakers-container {
  @extend %container;
  padding-bottom: calc($containerPadding/2);
  position: relative;
  h2 {
    font-size: 1.9rem;
    padding: 15px 0;
  }
  .watermark {
    position: absolute;
    right: 0 - calc($containerPadding * 2);
    bottom: 0 + $containerPadding;
    display: none;
  }
  @include respond-to(lg) {
    .speakers-content {
      padding: $containerPadding 0;
      justify-content: flex-start;
    }
  }
  @include respond-to(xl) {
    background-color: $lightPink;
    margin-right: $containerPadding * 2;
    border-radius: 0 10px 10px 0;
    h2 {
      color: darken($darkPink, 10);
    }
    .watermark {
      display: block;
    }
  }
}
.speakers-content {
  width: 100%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: stretch;
  position: relative;
  z-index: 1;
}

